[project]
name = "aozora-brewer"
version = "0.1.0"
description = ""
authors = [
    {name = "Thamires Falbo",email = "111710331+thamiresfalbo@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pypub3 (>=2.0.7,<3.0.0)",
    "beautifulsoup4 (>=4.13.3,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
